# ImageProcessing

./: .gitignore  ImageProcessing.pro  app.cpp  image_processing.cpp  image_processing.h  imageviewer.cpp  imageviewer.h
ImageProcessing/: CMakeLists.txt  ImageIO.cpp  ImageIO.h  ImageOperationInvertPixels.h  ImageProcessing.cpp  ImageProcessing.h  main.cpp
ImageProcessing/Wrappers/: QImageWrapper.cpp  QImageWrapper.h  QRectWrapper.cpp  QRectWrapper.h
ImageProcessing/include/: BoxFilterWidget.h  ImageProcessing.h
ImageProcessing/include/Common/: Matrix.h
ImageProcessing/include/IO/: ImageIO.h
ImageProcessing/include/Operations/: IImageOperationBase.h  ImageOperationBoxFilter.h  ImageOperationCircularFilter.h  ImageOperationGaussianFilter.h  ImageOperationGrayScale.h  ImageOperationInvertPixels.h  ImageOperationLinearFilter.h
ImageProcessing/include/Wrappers/: QImageWrapper.h
ImageProcessing/src/: BoxFilterWidget.cpp  ImageProcessing.cpp
ImageProcessing/src/IO/: ImageIO.cpp
ImageProcessing/src/Wrappers/: QImageWrapper.cpp  QRectWrapper.cpp
